fix hoverBox overflow issue, prototype of multiple reference

--- a/app/style/global.sass
+++ b/app/style/global.sass
@@ -129,6 +129,8 @@ article.thread, #hoverBox
     margin-top: 0
 
 #hoverBox, .hoverBox
+  max-height: 100%
+  overflow-y: auto
   position: fixed
   top: -5000px
   left: 0
